# dotfiles2

./: CMakeLists.txt  _profile  _tmux.conf  _vimrc  aliases.sh  base16-shell.sh  gitstatus.py  pain_control.tmux  tmux_buffer.sh  tmux_vim.sh
cmake/: base16-shell.cmake  base16-vim.cmake  oksh.cmake  oksh.cmake.script  tmux.cmake  vim.cmake
